static/styles/right-sidebar.scss
.right-sidebar {
    -webkit-font-smoothing: antialiased;
    font-size: 0.89rem;
}

.right-sidebar a:hover {
    text-decoration: none;
}

#group-pms li:hover,
#user_presences li:hover,
#user_presences li.highlighted_user {
    background-color: hsl(93, 19%, 88%);
}

#user_presences,
#group-pms {
    position: relative;
    list-style-position: inside; /* Draw the bullets inside our box */
    margin-left: 0;
    overflow: auto;
}

#user_presences:hover,
#group-pms:hover {
    overflow-y: auto;
}

#user_presences li {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

#user_presences li,
#group-pms li {
    list-style-type: none;

    border-radius: 4px;
    margin: 1px 0px;
    padding-right: 15px;
}

#user_presences .arrow {
    top: 0px;
}

#group-pm-title {
    margin: 10px 0px 0px 0px;
    display: inline-block;
}

.user-status-indicator,
.group-pm-status-indicator {
    display: block;
    width: 8px;
    height: 8px;
    margin: 0px 5px;
    border-radius: 50%;
    border: 1px solid;
    float: left;
    position: absolute;
    top: 5px;
}

.user_active .user-status-indicator,
.group-pm-status-indicator {
    background-color: hsl(106, 74%, 44%);
    border-color: hsl(106, 74%, 44%);
}

.user_idle .user-status-indicator {
    border-color: hsl(29, 84%, 51%);
    background-color: hsl(29, 84%, 51%);

    background: -moz-linear-gradient(top, hsla(0, 0%, 100%, 0.0) 50%, hsla(29, 84%, 51%, 1.0) 50%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, hsla(0, 0%, 100%, 0.0)), color-stop(50%, hsla(29, 84%, 51%, 1.0))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, hsla(0, 0%, 100%, 0.0) 50%, hsla(29, 84%, 51%, 1.0) 50%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, hsla(0, 0%, 100%, 0.0) 50%, hsla(29, 84%, 51%, 1.0) 50%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top, hsla(0, 0%, 100%, 0.0) 50%, hsla(29, 84%, 51%, 1.0) 50%); /* IE10+ */
    background: linear-gradient(to bottom, hsla(0, 0%, 100%, 0.0) 50%, hsla(29, 84%, 51%, 1.0) 50%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ec7e18', GradientType=0 ); /* IE6-9 */
}

.user-status-indicator {
    background-color: none;
    border-color: hsl(0, 0%, 50%);
}

.user_unknown .user-status-indicator {
    display: none;
}

#user_presences a,
#group-pms a {
    color: inherit;
    margin-left: 20px;
}

#invite-user-link i {
    text-decoration: none;
    margin-right: 5px;
}

.group-pms-sidebar-entry .selectable_sidebar_block {
    width: 100%;
}

.group-pm-link,
.user-presence-link,
.user_sidebar_entry .selectable_sidebar_block {
    overflow: hidden;
    text-overflow: ellipsis;
}

.user_sidebar_entry .selectable_sidebar_block {
    width: calc(100% - 16px);
    display: flex;
    flex-direction: row;
}

.user-presence-link {
    width: calc(100% - 24px);
}

.group-pm-link {
    width: calc(100% - 60px);
    display: inline-block;
}

.selectable_sidebar_block {
    cursor: pointer;
}

.group-pms-sidebar-entry,
.user_sidebar_entry {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
}

.user_sidebar_entry .count,
.group-pms-sidebar-entry .count {
    float: right;
    padding: 0 4px;
    background: hsl(105, 2%, 50%);
    border-radius: 0px;
    color: hsl(0, 0%, 100%);
    font-size: 12px;
    line-height: 14px;
    height: 15px;
    font-weight: normal;
    letter-spacing: 0.6px;
    position: relative;
    top: 3px;
    border-radius: 4px;
    margin-left: 5px;
}

.user_sidebar_entry .count {
    display: none;
}

.group-pms-sidebar-entry .count {
    margin-right: 16px;
}

.user_sidebar_entry.user-with-count .count {
    display: block;
}

#userlist-toggle {
    display: none;
    position: absolute;
    top: 0px;
    right: 0px;
    text-align: center;
    vertical-align: middle;
    border-left: 2px solid hsl(204, 20%, 74%);
}

#userlist-toggle-button {
    text-decoration: none;
    background-color: hsl(0, 0%, 89%);
    color: hsl(0, 0%, 52%);
    display: block;
    width: 40px;
    height: 19px;
    padding-top: 12px;
    padding-bottom: 9px;
}

#group-pm-list {
    display: none;
}

#group-pm-list.show {
    display: block;
}

#userlist-header,
#group-pm-header {
    margin-right: 10px;
}

.sidebar-items:first-of-type #userlist-header {
    border-top: none;
}

#userlist-header {
    cursor: pointer;
}

#user_filter_icon {
    float: right;
    font-size: 13px;
    opacity: 0.50;
    margin-top: 3px;
    margin-right: 10px;
}

#feedback_section {
    text-align: left;
    padding-bottom: 15px;
    border-bottom: 1px solid hsl(0, 0%, 88%);
    margin-right: 10px;
}

#sidebar-keyboard-shortcuts #keyboard-icon {
    position: fixed;
    cursor: pointer;
    font-size: 20px;
}

